crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_string_alternation.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"pattern\":\"^(a|b)$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => matches!(s.as_str(), "a" | "b"),
            _ => false,
        }
