crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__prefix_items_then_items_schema_2020.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"https://json-schema.org/draft/2020-12/schema\",\"items\":{\"type\":\"string\"},\"prefixItems\":[{\"type\":\"integer\"}],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                (arr.iter().skip(1usize).all(|instance| instance.is_string()))
                    && (arr
                        .get(0usize)
                        .map_or(
                            true,
                            |instance| match instance {
                                serde_json::Value::Number(n) => {
                                    jsonschema::__private::types::is_integer(n)
                                }
                                _ => false,
                            },
                        ))
            }
            _ => false,
        }
