crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__property_names_ref_pattern_stays_generic.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$defs\":{\"s\":{\"pattern\":\"^a\",\"type\":\"string\"}},\"propertyNames\":{\"$ref\":\"#/$defs/s\"},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.keys()
                    .all(|key| {
                        (|instance: &serde_json::Value| validate_ref_0(
                            instance,
                        ))(&serde_json::Value::String(key.clone()))
                    })
            }
            _ => false,
        }
