crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__property_names_ref_string_only.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$defs\":{\"s\":{\"format\":\"uri\",\"type\":\"string\"}},\"propertyNames\":{\"$ref\":\"#/$defs/s\"},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => true,
            _ => false,
        }
